internal/xds/translator/testdata/out/xds-ir/http-route-multiple-mirrors.routes.yaml
- ignorePortInHostMatching: true
  name: first-listener
  virtualHosts:
  - domains:
    - '*'
    name: first-listener/*
    routes:
    - match:
        prefix: /
      name: mirror-route
      route:
        cluster: route-dest
        requestMirrorPolicies:
        - cluster: mirror-route-dest
        - cluster: mirror-route-dest1
